--- a/notebooks/gpt4-v3.ipynb
+++ b/notebooks/gpt4-v3.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3227feae-a2f4-4815-ad45-4c6bacad2631",
    "metadata": {
     "scrolled": true
@@ -415,7 +415,7 @@
    ],
    "source": [
     "main(start_from_index=0,\n",
-    "     stop_at_index=20_000\n",
+    "     stop_at_index=20_000,\n",
     "     load_junk_labels=False,\n",
     "     save_file='../results/test.jsonl'\n",
     "    )"
