Updates to sandbox

--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -11,35 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch 1: ['line1', 'line2', 'line3', 'line4', 'line5']\n",
-      "Batch 2: ['line6', 'line7', 'line8', 'line9', 'line10']\n"
+      "[array(['line1', 'line2', 'line3', 'line4', 'line5', 'line6', 'line7',\n",
+      "       'line8', 'line9', 'line10'], dtype='<U6')]\n"
      ]
     }
    ],
    "source": [
     "import math\n",
+    "import numpy as np\n",
     "\n",
-    "def split_into_batches(text, max_batch_size):\n",
-    "    lines = text.strip().split(\"\\n\")\n",
-    "    total_lines = len(lines)\n",
-    "    \n",
-    "    # Determine the number of batches\n",
-    "    num_batches = math.ceil(total_lines / max_batch_size)\n",
-    "    \n",
-    "    # If not evenly divisible, adjust batch sizes to be as even as possible\n",
-    "    batch_size = math.ceil(total_lines / num_batches)\n",
-    "\n",
-    "    # Split into batches\n",
-    "    batches = [lines[i:i + batch_size] for i in range(0, total_lines, batch_size)]\n",
-    "    \n",
-    "    return batches\n",
+    "def batched(doc, batch_size):\n",
+    "    lines = doc.strip().split(\"\\n\")\n",
+    "    return np.array_split(lines, math.ceil(len(lines) / batch_size))\n",
     "\n",
     "# Example usage:\n",
     "document = \"\"\"line1\n",
@@ -53,11 +43,10 @@
     "line9\n",
     "line10\"\"\"\n",
     "\n",
-    "max_batch_size = 8\n",
-    "batches = split_into_batches(document, max_batch_size)\n",
+    "max_batch_size = 10\n",
+    "batches = batched(document, max_batch_size)\n",
     "\n",
-    "for i, batch in enumerate(batches):\n",
-    "    print(f\"Batch {i+1}: {batch}\")"
+    "print(batches)"
    ]
   }
  ],
@@ -77,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
